--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022" />
 
+    <!-- enter and backspace -->
+
+
+    <Button
+        android:id="@+id/key_del"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="Slett"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/keyboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.17"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ordle"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/key_ent"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="Enter"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/keyboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.832"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ordle"
+        app:layout_constraintVertical_bias="0.0" />
 
     <GridLayout
         android:id="@+id/keyboard"
@@ -31,6 +63,7 @@
         android:useDefaultMargins="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
@@ -85,10 +118,21 @@
             android:textSize="30sp" />
 
         <Button
-            android:id="@+id/key_u"
+            android:id="@+id/key_tY"
             android:layout_row="0"
             android:layout_rowSpan="1"
             android:layout_column="5"
+            android:layout_columnSpan="1"
+            android:minWidth="4dp"
+            android:padding="4dp"
+            android:text="T"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/key_u"
+            android:layout_row="0"
+            android:layout_rowSpan="1"
+            android:layout_column="6"
             android:layout_columnSpan="1"
             android:minWidth="4dp"
             android:padding="4dp"
@@ -99,7 +143,7 @@
             android:id="@+id/key_i"
             android:layout_row="0"
             android:layout_rowSpan="1"
-            android:layout_column="6"
+            android:layout_column="7"
             android:layout_columnSpan="1"
             android:minWidth="4dp"
             android:padding="4dp"
@@ -110,7 +154,7 @@
             android:id="@+id/key_o"
             android:layout_row="0"
             android:layout_rowSpan="1"
-            android:layout_column="7"
+            android:layout_column="8"
             android:layout_columnSpan="1"
             android:minWidth="4dp"
             android:padding="4dp"
@@ -121,22 +165,11 @@
             android:id="@+id/key_p"
             android:layout_row="0"
             android:layout_rowSpan="1"
-            android:layout_column="8"
-            android:layout_columnSpan="1"
-            android:minWidth="4dp"
-            android:padding="4dp"
-            android:text="P"
-            android:textSize="30sp" />
-
-        <Button
-            android:id="@+id/key_aa"
-            android:layout_row="0"
-            android:layout_rowSpan="1"
             android:layout_column="9"
             android:layout_columnSpan="1"
             android:minWidth="4dp"
             android:padding="4dp"
-            android:text="Å"
+            android:text="P"
             android:textSize="30sp" />
 
         <!-- Row 2 -->
@@ -241,25 +274,14 @@
             android:textSize="30sp" />
 
         <Button
-            android:id="@+id/key_oe"
+            android:id="@+id/key_aa"
             android:layout_row="1"
             android:layout_rowSpan="1"
             android:layout_column="9"
             android:layout_columnSpan="1"
             android:minWidth="4dp"
             android:padding="4dp"
-            android:text="Ø"
-            android:textSize="30sp" />
-
-        <Button
-            android:id="@+id/key_ae"
-            android:layout_row="1"
-            android:layout_rowSpan="1"
-            android:layout_column="10"
-            android:layout_columnSpan="1"
-            android:minWidth="4dp"
-            android:padding="4dp"
-            android:text="Æ"
+            android:text="Å"
             android:textSize="30sp" />
 
         <!-- Row 3 -->
@@ -342,32 +364,32 @@
             android:textSize="30sp" />
 
         <Button
-            android:id="@+id/key_del"
-            android:layout_row="2"
-            android:layout_rowSpan="1"
-            android:layout_column="7"
-            android:layout_columnSpan="1"
-            android:minWidth="4dp"
-            android:padding="4dp"
-            android:text="B"
-            android:textSize="30sp" />
-
-        <Button
-            android:id="@+id/key_ent"
+            android:id="@+id/key_ae"
             android:layout_row="2"
             android:layout_rowSpan="1"
             android:layout_column="8"
             android:layout_columnSpan="1"
             android:minWidth="4dp"
             android:padding="4dp"
-            android:text="E"
+            android:text="Æ"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/key_oe"
+            android:layout_row="2"
+            android:layout_rowSpan="1"
+            android:layout_column="9"
+            android:layout_columnSpan="1"
+            android:minWidth="4dp"
+            android:padding="4dp"
+            android:text="Ø"
             android:textSize="30sp" />
     </GridLayout>
 
     <GridLayout
         android:id="@+id/ordle"
         android:layout_width="409dp"
-        android:layout_height="419dp"
+        android:layout_height="302dp"
         android:alignmentMode="alignMargins"
         android:columnCount="5"
         android:columnOrderPreserved="false"
@@ -377,7 +399,7 @@
         android:useDefaultMargins="true"
         app:layout_constraintBottom_toTopOf="@+id/keyboard"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.064">
@@ -666,4 +688,5 @@
             android:text=" "
             android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
     </GridLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
